# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trussed-hkdf"
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
version = "0.1.0"
edition = "2021"
description = "Trussed backend implementing an HKDF extension"
license = "Apache-2.0 OR MIT"
rust-version = "1.66"
keywords = ["trussed", "hkdf", "no-std"]

[dependencies]
delog = { version = "0.1.6", optional = true }
heapless-bytes = "0.3.0"
hkdf = "0.12"
hmac = "0.12"
log = "0.4.17"
postcard = "0.7"
serde = { version = "1.0.152", default-features = false }
sha2 = { version = "0.10", default-features = false }
trussed = { version = "0.1.0", features = ["serde-extensions"]}

[dev-dependencies]

env_logger = "0.10.0"
hex-literal = "0.3.4"
test-log = "0.2.11"
hmac = "0.11.0"

[features]

std = []
virt = ["trussed/virt", "std"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "ebd27e49ca321089d01d8c9b169c4aeb58ceeeca" }
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "2a2b2091598b9ecd795966af42ab0766972f26da" }
